fix spacing

--- a/src/pages/Exchange/Exchange.css
+++ b/src/pages/Exchange/Exchange.css
@@ -48,7 +48,7 @@
 }
 
 .App-settings-error {
-  margin-bottom: 1.6rem;
+  margin: 0 0 1.6rem;
   color: #f3b50c;
   font-size: 1.4rem;
 }
